# CruxC2

./: .gitignore  Cargo.toml  README.md
src/agent/: agent.rs  agent_utils.rs  args.rs
src/server/: args.rs  linux_shell.rs  server.rs
src/utils/: data.rs  mod.rs  network.rs  os.rs  shell_var.rs
